<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".Accounts.LoginSelectionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:onClick="loginWithFacebook"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="8dp"
                android:onClick="loginWithFacebook"
                android:src="@drawable/ic_facebook" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="#3D5798"
                android:gravity="start|center"
                android:onClick="loginWithFacebook"
                android:padding="12dp"
                android:text="@string/login_with_facebook"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:fontFamily="@font/baskerville"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:onClick="signinWithGmail"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="8dp"
                android:background="@drawable/oval"
                android:backgroundTint="#3D5798"
                android:onClick="signinWithGmail"
                android:src="@drawable/ic_goggle" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="#3D5798"
                android:gravity="start|center"
                android:onClick="signinWithGmail"
                android:padding="12dp"
                android:text="@string/login_with_google"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:fontFamily="@font/baskerville"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:onClick="loginWithPhone"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="8dp"
                android:background="@drawable/oval"
                android:backgroundTint="#3D5798"
                android:onClick="loginWithPhone"
                android:padding="12dp"
                android:src="@drawable/ic_phone"
                android:tint="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="#3D5798"
                android:gravity="start|center"
                android:onClick="loginWithPhone"
                android:padding="12dp"
                android:text="@string/login_with_phone_number"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:fontFamily="@font/baskerville"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/login_terms_condition_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:paddingTop="15dp"
        android:text="By signing up, you confirm that you agree to our \n Terms of Use and have read and understood \n our Privacy Policy."
        android:textColor="@color/primaryDark" />
</FrameLayout>